Added whatsapp button

--- a/src/style.css
+++ b/src/style.css
@@ -206,6 +206,39 @@ button:focus {
 }
 
 /* --------- */
+/* Whatsapp icons */
+/* --------- */
+.floating-whatsapp {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #68187a;
+  color: white;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  transition: transform 0.3s ease-in-out;
+  text-decoration: none;
+}
+
+.floating-whatsapp:hover {
+  transform: scale(1.1);
+}
+
+.floating-whatsapp:active {
+  transform: scale(0.9);
+}
+
+.floating-whatsapp-icon {
+  font-size: 2em;
+  color: white;
+}
+
+/* --------- */
 /* Home section */
 /* --------- */
 .wave {
